a gradient underline added to the active link

--- a/src/index.css
+++ b/src/index.css
@@ -139,3 +139,23 @@
   background: rgba(255, 255, 255, 0.6);
   filter: blur(750px);
 }
+
+.navbar li:hover {
+  text-shadow: 0 4px 10px rgba(255, 255, 255, 0.3);
+}
+
+.active-link {
+  background: linear-gradient(to right, #5ce1e6, #33bbcf);
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+.active-link::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(to right, #5ce1e6, #33bbcf);
+  border-radius: 4px;
+}
+
